crates/ink/tests/ui/abi/sol/fail/trait-message-selector-overlap.stderr
error[E0119]: conflicting implementations of trait `DispatchableMessageInfo<3793696718>` for type `Contract`
  --> tests/ui/abi/sol/fail/trait-message-selector-overlap.rs:28:9
   |
23 |         pub fn message(&self) {}
   |         ------------------------ first implementation here
...
28 |         fn message(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^ conflicting implementation for `Contract`
